use collect(Collectors.toList()) > toList (Java16)